@@ -1,0 +1,10 @@
+#include "datetime.ih"
+
+DateTime::DateTime(string const &timeStr,  TimeType type, int zoneShift)
+:
+    d_type(type),
+{
+    initializeZones(0, zoneShift);
+    parse(timeStr);
+    breakDown(type);
+}
