@@ -1,3 +1,7 @@
+bobcat (1.22.1) (ISN)
+
+  * Repaired flaws in and extended the class DateTime 
+
 bobcat (1.21.1)
 
   * Several man-pages were updated/modified (Config, Log, Process, User, X2a)
